--- a/frontend/src/components/Lane.css
+++ b/frontend/src/components/Lane.css
@@ -8,9 +8,9 @@
 }
 
 .card-placement-box {
-  --card-width: 84px;
-  --card-height: 128px; /* 160px * 0.8 */
-  --card-overlap-px: 42px;
+  --card-width: 63px;
+  --card-height: 96px;
+  --card-overlap-px: 32px;
   --left-buffer: 20px;
 
   width: 100%;
@@ -65,9 +65,9 @@
 
 @media (max-width: 450px) {
   .card-placement-box {
-    --card-width: 64px;
-    --card-height: 90px;
-    --card-overlap-px: 32px;
+    --card-width: 48px;
+    --card-height: 68px;
+    --card-overlap-px: 24px;
     --left-buffer: 10px;
   }
 }
